--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "jest": "^27.5.0"
+  },
+  "dependencies": {
+    "@kaholo/plugin-library": "^2.0.0",
+    "nodemailer": "^6.7.5"
   }
 }
