--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "jest": "27.5.0"
   },
   "dependencies": {
-    "@kaholo/plugin-library": "2.0.0",
+    "@kaholo/plugin-library": "^2.0.0",
     "nodemailer": "6.7.5"
   }
 }
