--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "version": "1.0.0",
   "imgUrl": "logo.png",
+  "description": "Sends email via SMTP server",
   "keywords": [
     "email",
     "mail",
