[KP-853] Documentation Update (#3)
[KP-853] Documentation Update

--- a/config.json
+++ b/config.json
@@ -1,19 +1,21 @@
 {
   "name": "smtp",
-  "viewName": "Simple Mail Transfer Protocol",
+  "viewName": "SMTP",
   "type": "executer",
   "execProgram": "node",
   "main": "app.js",
   "version": "1.0.0",
   "imgUrl": "logo.png",
+  "description": "Sends email via SMTP server",
   "keywords": [
     "email",
     "mail",
     "smtp",
     "message",
-    "notifications"
+    "notifications",
+    "send"
   ],
-  "category": "NOTIFICATIONS",
+  "category": "Notifications",
   "auth": {
     "authId": "smtpAccount",
     "params": [
@@ -30,29 +32,30 @@
         "type": "int",
         "description": "Port number of STMP server",
         "placeholder": 25,
+        "default": 25,
         "parserType": "number"
       },
       {
         "name": "username",
         "viewName": "Username",
         "type": "string",
-        "description": "Username to authenticate with to the host.",
+        "description": "Username for SMTP server authentication",
         "placeholder": "myuser@host.com"
       },
       {
         "name": "password",
         "viewName": "Password",
         "type": "vault",
-        "description": "Password to authenticate with to the host."
+        "description": "Password for SMTP server authentication"
       }
     ]
   },
   "settings": [
     {
       "name": "from",
-      "viewName": "From",
+      "viewName": "Default From",
       "type": "string",
-      "description": "The email address of the sender of the email",
+      "description": "The default value for email address of the sender of the email",
       "placeholder": "kaholo-notifications@myorg.com"
     }
   ],
@@ -90,7 +93,7 @@
           "viewName": "CC",
           "type": "text",
           "description": "One or more email addresses (comma or new line separated) of CC recipients of the email",
-          "placeholder": "penney.a@myorg.com",
+          "placeholder": "penny.a@myorg.com",
           "required": false
         },
         {
@@ -98,14 +101,14 @@
           "viewName": "BCC",
           "type": "text",
           "description": "One or more email addresses (comma or new line separated) of BCC recipients of the email",
-          "placeholder": "ray.c@myorg.com",
+          "placeholder": "raymond.c@myorg.com",
           "required": false
         },
         {
           "name": "text",
           "viewName": "Plain Text Message",
           "type": "string",
-          "description": "Plaintext version of email",
+          "description": "Plain text version of email message body",
           "placeholder": "Your Pipeline has completed successfully!",
           "required": false
         },
@@ -113,7 +116,7 @@
           "name": "html",
           "viewName": "HTML Message",
           "type": "string",
-          "description": "HTML version of email",
+          "description": "HTML version of email message body",
           "placeholder": "<b><em>Your Pipeline has completed sucessfully!</em></b><img src=\"https://upload.wikimedia.org/wikipedia/commons/6/64/Champagne_uncorking_photographed_with_a_high_speed_air-gap_flash.jpg\" alt=\"champagne image\">",
           "required": false
         },
@@ -122,7 +125,7 @@
           "viewName": "Attachment Paths",
           "type": "text",
           "description": "Paths to files on Kaholo agent to attach to email (one path per line)",
-          "placeholder": "/home/testpipeline-001/results.zip\n/home/testpipeline-002/results.zip",
+          "placeholder": "tests/test001-results.zip\n/usr/src/app/workspace/tests/test002-results.zip",
           "parserType": "array",
           "required": false
         }
